# Planning-and-Control-of-Autonomous-Vehicle

./: README.md
Auto_driving_1/src/planning/car_simulation/: CMakeLists.txt  package.xml
Auto_driving_1/src/planning/car_simulation/launch/: car_simulation.launch
Auto_driving_1/src/planning/car_simulation/src/: car_state.cpp
Auto_driving_1/src/planning/dynamic_routing/: CMakeLists.txt  package.xml
Auto_driving_1/src/planning/dynamic_routing/config/: configs.yaml
Auto_driving_1/src/planning/dynamic_routing/include/: dynamic_routing.h
Auto_driving_1/src/planning/dynamic_routing/include/EM_planner/: em_planner.h
Auto_driving_1/src/planning/dynamic_routing/include/Frenet/: FrenetOptimalTrajectory.h  cartesian_frenet_conversion.h
Auto_driving_1/src/planning/dynamic_routing/include/Hybrid_a_star/: bucketedqueue.h  dynamicvoronoi.h  grid_search.h  hybrid_a_star.h  node3d.h  point.h  reeds_shepp_path.h
Auto_driving_1/src/planning/dynamic_routing/include/Lattice_planner/: PlanningTarget.h  collision_checker.h  constraint_checker.h  end_condition_sampler.h  feasible_region.h  lattice_planner.h  lattice_trajectory1d.h  path_time_graph.h  piecewise_acceleration_trajectory1d.h  piecewise_braking_trajectory_generator.h  prediction_querier.h  trajectory1d_generator.h  trajectory_combiner.h  trajectory_evaluator.h
Auto_driving_1/src/planning/dynamic_routing/include/Obstacle/: Ob_prediction_trajectory.h  Obstacle.h  Obstacle_avoid.h  Obstacle_test.h  boundarys.h
Auto_driving_1/src/planning/dynamic_routing/include/Open_planner/: PlannerH.h  PlanningHelpers.h  RoadNetwork.h  TrajectoryCosts.h  TrajectoryDynamicCosts.h  op_trajectory_generator.h
Auto_driving_1/src/planning/dynamic_routing/include/Polynomial/: QuarticPolynomial.h  QuinticPolynomial.h  curve1d.h  polynomial_curve1d.h  polynomial_xd.h  quartic_polynomial_curve1d.h  quintic_polynomial_curve1d.h
Auto_driving_1/src/planning/dynamic_routing/include/QP/: constant_jerk_trajectory1d.h  fem_1d_expanded_jerk_qp_problem.h  fem_1d_qp_problem.h  lateral_osqp_optimizer.h  lateral_qp_optimizer.h  osqp_spline_1d_solver.h  piecewise_jerk_path_problem.h  piecewise_jerk_problem.h  piecewise_jerk_speed_problem.h  piecewise_jerk_trajectory1d.h  piecewise_linear_constraint.h  piecewise_linear_generator.h  piecewise_linear_kernel.h  qp_solver.h
Auto_driving_1/src/planning/dynamic_routing/include/ReferenceLine/: reference_line.h  reference_line_info.h  reference_point.h
Auto_driving_1/src/planning/dynamic_routing/include/Spline/: CubicSpline1D.h  active_set_qp_solver.h  active_set_spline_1d_solver.h  affine_constraint.h  macros.h  spline_1d.h  spline_1d_constraint.h  spline_1d_kernel.h  spline_1d_seg.h  spline_1d_solver.h  spline_seg_kernel.h
Auto_driving_1/src/planning/dynamic_routing/include/common/: Configs.h  angle.h  auxiliary_function.h  emacros.h  indexed_list.h  math_utils.h  point_factory.h  sin_table.h  speed_data.h  speed_limit.h  speed_limit_decider.h
Auto_driving_1/src/planning/dynamic_routing/include/multilane/: multilane.h
Auto_driving_1/src/planning/dynamic_routing/include/path/: path_boundary.h  path_bounds_decider.h  path_data.h  path_decision.h  path_matcher.h  path_points.h  path_struct.h  trajectoryPoint.h
Auto_driving_1/src/planning/dynamic_routing/launch/: dynamic_routing.launch  op_common_params.launch
Auto_driving_1/src/planning/dynamic_routing/obstacle_files/sim_1/: x  y
Auto_driving_1/src/planning/dynamic_routing/obstacle_files/sim_2/: x  y
Auto_driving_1/src/planning/dynamic_routing/obstacle_files/sim_3/: x  y
Auto_driving_1/src/planning/dynamic_routing/obstacle_files/sim_4/: x  y
Auto_driving_1/src/planning/dynamic_routing/other_referenceline_files/1/: x  y
Auto_driving_1/src/planning/dynamic_routing/src/: dynamic_node.cpp  dynamic_routing.cpp
Auto_driving_1/src/planning/dynamic_routing/src/EM_planner/: em_planner.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Frenet/: FrenetOptimalTrajectory.cpp  cartesian_frenet_conversion.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Hybrid_a_star/: bucketedqueue.cpp  dynamicvoronoi.cpp  grid_search.cpp  hybrid_a_star.cpp  node3d.cpp  reeds_shepp_path.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Lattice_planner/: PlanningTarget.cpp  collision_checker.cpp  constraint_checker.cpp  end_condition_sampler.cpp  feasible_region.cpp  lattice_planner.cpp  lattice_trajectory1d.cpp  path_time_graph.cpp  piecewise_acceleration_trajectory1d.cpp  piecewise_braking_trajectory_generator.cpp  prediction_querier.cpp  trajectory1d_generator.cpp  trajectory_combiner.cpp  trajectory_evaluator.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Obstacle/: Ob_prediction_trajectory.cpp  Obstacle.cpp  Obstacle_avoid.cpp  Obstacle_test.cpp  boundarys.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Open_planner/: PlannerH.cpp  PlanningHelpers.cpp  TrajectoryCosts.cpp  TrajectoryDynamicCosts.cpp  op_trajectory_generator.cpp
Auto_driving_1/src/planning/dynamic_routing/src/Polynomial/: QuarticPolynomial.cpp  QuinticPolynomial.cpp  polynomial_xd.cpp  quartic_polynomial_curve1d.cpp  quintic_polynomial_curve1d.cpp
Auto_driving_1/src/planning/dynamic_routing/src/QP/: constant_jerk_trajectory1d.cpp  fem_1d_expanded_jerk_qp_problem.cpp  fem_1d_qp_problem.cpp  lateral_osqp_optimizer.cpp  lateral_qp_optimizer.cpp  osqp_spline_1d_solver.cpp  piecewise_jerk_path_problem.cpp  piecewise_jerk_problem.cpp  piecewise_jerk_speed_problem.cpp  piecewise_jerk_trajectory1d.cpp  piecewise_linear_constraint.cpp  piecewise_linear_generator.cpp  piecewise_linear_kernel.cpp  qp_solver.cpp
Auto_driving_1/src/planning/global_routing/: CMakeLists.txt  package.xml
Auto_driving_1/src/planning/global_routing/config/: planning_demo.rviz
Auto_driving_1/src/planning/global_routing/include/: global_path_struct.h  global_routing.h
Auto_driving_1/src/planning/global_routing/launch/: global_routing.launch  global_routing_with_rviz.launch
Auto_driving_1/src/planning/global_routing/src/: global_routing.cpp  global_routing_node.cpp
(+92 files in other folders)
